--- a/index.html
+++ b/index.html
@@ -214,42 +214,34 @@
         </main>
 
         <footer>
-            <div class="container footer-content">
-                <div class="footer-logo">
-                    <div class="logo">Lofritex</div>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-                    <img src="/api/placeholder/100/30" alt="Google">
-                    <img src="/api/placeholder/100/30" alt="100">
+            <div class="footer-container">
+                <div class="footer-section logo-section">
+                    <img src="/src/Asset 19.png" alt="Lofritex Logo" class="footer-logo">
                 </div>
-                <div class="footer-links">
+                <div class="footer-section links-section">
                     <h4>Links</h4>
                     <ul>
+                        <li><a href="#">Home</a></li>
                         <li><a href="#">About Us</a></li>
                         <li><a href="#">Services</a></li>
-                        <li><a href="#">Case Studies</a></li>
-                        <li><a href="#">How it works</a></li>
-                        <li><a href="#">Blog</a></li>
-                        <li><a href="#">Careers</a></li>
-                        <li><a href="#">Areas We Serve</a></li>
                     </ul>
                 </div>
-                <div class="footer-contact">
+                <div class="footer-section contact-section">
                     <h4>Contact us</h4>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-                    <p>+923183561921</p>
-                    <div class="social-icons">
-                        <a href="#"><img src="/api/placeholder/24/24" alt="Facebook"></a>
-                        <a href="#"><img src="/api/placeholder/24/24" alt="Instagram"></a>
-                        <a href="#"><img src="/api/placeholder/24/24" alt="Twitter"></a>
-                        <a href="#"><img src="/api/placeholder/24/24" alt="LinkedIn"></a>
-                    </div>
+                    <address>
+                        Nandanam, Chathoth,<br>
+                        Chingapuram P.O,<br>
+                        Thikkody, Quilandy,<br>
+                        Kozhikode, Kerala, India<br>
+                        +91 85905 71947
+                    </address>
                 </div>
             </div>
-            <div class="container">
-                <p>&copy; 2023 Copyright by Lofritex Developers. All rights reserved.</p>
+            <div class="footer-bottom">
+                <p>© 2024 Copyright by Lofritex IT Solutions LLP. All rights reserved.</p>
             </div>
         </footer>
-    </div>    
+    </div>
 </body>
 
 </html>
