--- a/index.html
+++ b/index.html
@@ -15,18 +15,17 @@
 </head>
 
 <body>
-    <div id="home" class="container">
+    <div class="container">
         <header>
             <nav>
-                <a href="#home"><img src="/src/Asset 16 1.svg" alt="Lofritex" class="logo"></a>
+                <a href="#"><img src="/src/Asset 16 1.svg" alt="Lofritex" class="logo"></a>
                 <span class="span">
                     <a href="https://staging.lofritex.com">Home</a>
                     <a href="https://staging.lofritex.com">Services</a>
                     <a href="https://staging.lofritex.com">About Us</a>
                 </span>
-                <button class="contact-button">
-                    <a href="https://staging.lofritex.com" >Get in Touch</a>
-                </button>
+                <a href="https://staging.lofritex.com" class="contact-button">Get in Touch</a>
+
             </nav>
         </header>
 
@@ -218,7 +217,7 @@
         <footer>
             <div class="footer-container">
                 <div class="footer-section logo-section">
-                    <img src="/src/Asset 19.png" alt="Logo" class="footer-logo">
+                    <a href="#"><img src="/src/Asset 19.png" alt="Logo" class="footer-logo"></a>
                 </div>
                 <div class="footer-section links-section">
                     <h4>Links</h4>
